loadbalancer.tf
resource "aws_lb_target_group" "planarian" {
  name     = "${var.project}-asg-tg"
  port     = 80
  protocol = "HTTP"
  vpc_id   = aws_vpc.planarian.id
  stickiness {
    enabled = false
    type    = "lb_cookie"
  }
  health_check {
    enabled             = true
    healthy_threshold   = 2
    unhealthy_threshold = 2
    interval            = 5
    path                = "/"
    port                = 80
    protocol            = "HTTP"
    timeout             = 4
  }
  tags = merge(local.common_tags, { Name = "${var.project}-asg_tg" })
}

resource "aws_lb" "planarian" {
  name                       = "${var.project}-lb"
  internal                   = false
  load_balancer_type         = "application"
  security_groups            = [aws_security_group.elb_sg.id]
  subnets                    = aws_subnet.pub[*].id
  enable_deletion_protection = false
  tags                       = merge(local.common_tags, { Name = "${var.project}-loadbalancer" })
}

resource "aws_lb_listener" "https" {
  load_balancer_arn = aws_lb.planarian.arn
  port              = "443"
  protocol          = "HTTPS"
  certificate_arn   = aws_acm_certificate.ssl.arn
  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.planarian.arn
  }
  tags       = local.common_tags
  depends_on = [time_sleep.dns]
}

resource "aws_lb_listener" "http" {
  load_balancer_arn = aws_lb.planarian.arn
  port              = "80"
  protocol          = "HTTP"
  default_action {
    type = "redirect"

    redirect {
      port        = "443"
      protocol    = "HTTPS"
      status_code = "HTTP_301"
    }
  }
  tags = merge(local.common_tags, { Name = "${var.project}-listener" })
}
